--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AIキャラ統一プロンプトメーカー</title>
+  <title>AIキャラ統一プロンプトメーカー 無料版</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="app-header">
     <div class="wrap">
-      <h1>AIキャラ統一プロンプトメーカー</h1>
-      <p class="sub">日本語で選んで英語プロンプトを自動生成。JSON / スプレッドシート 両対応。</p>
+      <h1>AIキャラ統一プロンプトメーカー　無料版</h1>
+      <p class="sub">日本語で選んで英語プロンプトを自動生成。有料版はJSON / スプレッドシート 両対応。</p>
     </div>
   </header>
 
@@ -29,6 +29,6 @@
     </div>
   </footer>
 
-  <script src="main.js"></script>
+  <script src="main_free.js"></script>
 </body>
 </html>
